# puppet-master

./: .gitignore
.github/: frontendTests.yml
.github/workflows/: frontendTests.yml  test-client.yml  test-control-server.yml
client/: CMakeLists.txt  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sample.env  start-container.sh
client/.cargo/: config.toml
client/src/: communication.rs  main.rs  models.rs  tasks.rs  utils.rs
client/src/communication/: http.rs  udp.rs
client/src/tasks/: network_scan.rs  ssh_spread.rs
client/test/: mock_server.py  requirements.txt
control_server/: Dockerfile  README.md  requirements.txt  sample.env
control_server/src/: controller.py  data_class.py  db.py  middleware.py  router.py  web_settings.py
control_server/src/client/: client_settings.py  client_status.py  client_status_update_event.py  client_task_status_updater.py  client_tracker.py  tracked_client.py
control_server/src/crypto/: client_id_generator.py
control_server/src/data/: anonymous_client_task_response.py  client_data.py  client_identifier.py  client_task.py  client_task_collection.py  client_task_response.py  client_task_response_collection.py  deserializable.py  identifying_client_data.py  serializable.py  task.py  (+1 more)
control_server/tests/: client_id_generator_test.py  client_test.py  conftest.py  database_test_utils.py  hashable_dict.py  mock_database_test.py  mongo_database_test.py  test_mongo_database.py  utils.py
project-website/: pupp3tm45t3r5.html
web-server/: README.md  requirements.txt
web-server/django_web_server/: manage.py
(+100 files in other folders)
