[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sysinfo = { version = "0.26" }
whoami = { version = "1.2.3" }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
actix-rt = "*"
rand = "0.3.14"
lazy_static = "1.4.0"
hex = "0.4.3"
brotli = "3.3.4"
crc = "3.0.0"
